--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,9 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-      - boost-latest
     packages:
       - gcc-4.8
       - g++-4.8
-      - libboost-all-dev
       - valgrind
 
 before_install:
@@ -24,8 +22,6 @@ before_install:
   # clang 3.4
   - if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; fi
   - sudo apt-get update -qq
-  # make sure we're using new gcc tools
-  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.8 90
 
 install:
   # CMake
@@ -40,26 +36,4 @@ install:
 
 before_script:
   - cmake CMakeLists.txt
-
-script:
-  - make -j 8
-  - cpp-utils/bytes-tests
-  - cpp-utils/codecs-tests
-  - cpp-utils/fast-hash-tests
-  - cpp-utils/stl-io-tests
-  - cpp-utils/toolbox-tests
-  - open-addressing/open-index
-  - perfect-hash/perfect-hash
-  - linear-hash/linear-hash
-  - valgrind --leak-check=full cpp-utils/bytes-tests
-  - valgrind --leak-check=full cpp-utils/codecs-tests
-  - valgrind --leak-check=full cpp-utils/fast-hash-tests
-  - valgrind --leak-check=full cpp-utils/stl-io-tests
-  - valgrind --leak-check=full cpp-utils/toolbox-tests
-  - valgrind --leak-check=full open-addressing/open-index
-  - valgrind --leak-check=full perfect-hash/perfect-hash
-  #- valgrind --leak-check=full linear-hash/linear-hash
-
-after_success:
-  - coveralls -r . -b . -E Doxyfile --repo-token "${COVERALLS_TOKEN}" --gcov-options '\-lp'
-
+  - valgrind --leak-check=full batching
