--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,6 @@ before_install:
 install:
   # CMake
   - sudo apt-get install -qq cmake
-  - pip install --user travis requests[security] cpp-coveralls
   # g++4.8
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
@@ -36,4 +35,5 @@ install:
 
 before_script:
   - cmake CMakeLists.txt
+  - make
   - valgrind --leak-check=full batching
